tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__LeatherArmor-AAAAAAAAAAAAAAAAAAACrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 686,
  "optional_prerequisites": [
    42
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Killing some cows will give you enough leather to craft a complete set of leather armor.\n\nHint: You are able to dye this armor.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Leather Armor",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
