tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__LukeImYourFather-AAAAAAAAAAAAAAAAAAAAiw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 139,
  "prerequisites": [
    692,
    138
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With that dark steel you got, you may now craft yourself a new set of armor. While pretty basic at first, it can be upgraded later to unlock powerful features.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Luke, I'm Your Father",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    692,
    138
  ],
  "rewards": [],
  "tasks": []
}
