tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__MobRepellators-tgH86mIERWKIh8OAleKrSw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7062846405347552075,
  "optional_prerequisites": [
    529
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "First available in LV, the Mob Repellator prevents mobs from spawning in its radius. It works without power, but with it has a higher range.\n\n[note]You only need one to complete the quest.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mob Repellators",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
