tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__NanoGoggles-AAAAAAAAAAAAAAAAAAAFRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1350,
  "prerequisites": [
    1349,
    779
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The #1 product for spies and wanna-be-spies. Nano-Goggles. Don't you want one of these too? But they are sold out? Craft some!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nano Goggles",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1349,
    779
  ],
  "rewards": [],
  "tasks": []
}
