tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__OhMagicArmor-AAAAAAAAAAAAAAAAAAAHLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1839,
  "optional_prerequisites": [
    1158,
    1930
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Ironwood Armor is a magic armor with some special enchants. The Helm gives aqua affinity, the shoes feather falling, the plate and the legs extra protection.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "\"Oh, Magic\" Armor",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
